# cisco-switch-best-practices

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/cisco_audit/: __init__.py  auditor.py  cli.py  connector.py  models.py  parser.py
src/cisco_audit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cisco_audit/rules/: __init__.py  management.py  network.py  security.py
src/cisco_audit/web/: __init__.py  models.py  routes.py
src/cisco_audit/web/static/: style.css
src/cisco_audit/web/templates/: base.html  history.html  index.html  report.html  ssh.html  upload.html
tests/: conftest.py  test_auditor.py  test_cli.py  test_parser.py  test_rules.py  test_web.py
tests/fixtures/: compliant.cfg  noncompliant.cfg
