[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cisco-audit"
version = "0.1.0"
description = "Audit Cisco IOS/IOS-XE switch configurations against security and operational best practices"
requires-python = ">=3.10"
dependencies = [
    "ciscoconfparse2>=0.7.0",
    "netmiko>=4.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
cisco-audit = "cisco_audit.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 99
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
